--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>ProductListing</title>
-        <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+        <style>
+            * {
+                margin: 0;
+                padding: 0;
+            }
+            html,
+            body,
+            #root {
+                width: 100%;
+                height: 100%;
+            }
+        </style>
+        <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body>
         <div id="root"></div>
